# vector_prisma

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
src/vector_prisma/: __init__.py  models.py  operations.py  queries.py  vector_type.py
src/vector_prisma.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/vector_prisma/cli/: cli.py
src/vector_prisma/generator/: generator.py
src/vector_prisma/generator/templates/: client.py.jinja  models.py.jinja  vectors.py.jinja
