[tool.poetry]
name = "vector-prisma"
version = "0.1.0"
description = ""
authors = ["R-Okauchi <141081147+R-Okauchi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
prisma = "^0.15.0"
psycopg2 = "^2.9.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ipykernel = "^6.29.4"
types-pytz = "^2024.1.0.20240417"
mypy = "^1.11.2"
pytest-asyncio = "0.23.0"
polyfactory = "^2.16.2"
pytest-mock = "^3.14.0"
types-requests = "^2.32.0.20241016"
ruff = "^0.8.2"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
exclude = ["data"]
plugins = ["pydantic.mypy"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[tool.pydantic-mypy]
warn_required_dynamic_aliases = true
warn_untyped_fields = true
init_forbid_extra = true
init_typed = true

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
extend-select = ["I"]
extend-ignore = ["E722"]
